--- a/index.html
+++ b/index.html
@@ -9,51 +9,51 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <header>
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <header class="header">
+    <img class="header__image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="centered-main-page-element">
-    <section id="top-section-for-adding-element-to-list">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
+  <main class="main">
+    <section class="add-task">
+      <label for="add-task__label" for="new-task">Add Item</label>
+      <div class="add-task__wrapper">
+        <input id="new-task"class="add-task__input" type="text">
+        <button class="add-task__button">Add</button>
       </div>
     </section>
-    <section>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Delete">>
+    <section class="todo">
+      <h3 class="todo__title">Todo</h3>
+      <ul class="todo__list" id="incomplete-tasks">
+        <li class="todo__item">
+          <input class="todo__checkbox" type="checkbox">
+          <label class="todo__label">Pay Bills</label>
+          <input class="todo__input" type="text">
+          <button class="todo__edit">Edit</button>
+          <button class="todo__delete">
+            <img class="todo__delete-icon" src="./remove.svg" alt="Delete">>
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Delete">>
+        <li class="todo__item todo__item_edit">
+          <input class="todo__checkbox" type="checkbox">
+          <label class="todo__label">Go Shopping</label>
+          <input class="todo__input" type="text" value="Go Shopping" class="task">
+          <button class="todo__edit">Save</button>
+          <button class="todo__delete">
+            <img class="todo__delete-icon" src="./remove.svg" alt="Delete">>
           </button>
         </li>
       </ul>
     </section>
-    <section>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Delete">>
+    <section class="completed">
+      <h3 class="completed__title">Completed</h3>
+      <ul class="completed__list" id="completed-tasks">
+        <li class="completed__item">
+          <input class="completed__checkbox" type="checkbox" checked>
+          <label class="completed__label">See the Doctor</label>
+          <input class="completed__input" type="text">
+          <button class="completed__edit">Edit</button>
+          <button class="completed__delete">
+            <img class="completed__delete-icon" src="./remove.svg" alt="Delete">>
           </button>
         </li>
       </ul>
