--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <input class="todo__input" type="text">
           <button class="todo__edit">Edit</button>
           <button class="todo__delete">
-            <img class="todo__delete-icon" src="./remove.svg" alt="Delete">>
+            <img class="todo__delete-icon" src="./remove.svg" alt="Delete">
           </button>
         </li>
         <li class="todo__item todo__item_edit">
@@ -39,7 +39,7 @@
           <input class="todo__input" type="text" value="Go Shopping" class="task">
           <button class="todo__edit">Save</button>
           <button class="todo__delete">
-            <img class="todo__delete-icon" src="./remove.svg" alt="Delete">>
+            <img class="todo__delete-icon" src="./remove.svg" alt="Delete">
           </button>
         </li>
       </ul>
@@ -53,7 +53,7 @@
           <input class="completed__input" type="text">
           <button class="completed__edit">Edit</button>
           <button class="completed__delete">
-            <img class="completed__delete-icon" src="./remove.svg" alt="Delete">>
+            <img class="completed__delete-icon" src="./remove.svg" alt="Delete">
           </button>
         </li>
       </ul>
