refactor: change class names in html file according to BEM according to rule 2.1 html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
       <h3 class="completed__title">Completed</h3>
       <ul class="completed__list" id="completed-tasks">
         <li class="completed__item">
-          <input class="completed__checkbox" type="checkbox" checked>
-          <label class="completed__label">See the Doctor</label>
-          <input class="completed__input" type="text">
-          <button class="completed__edit">Edit</button>
-          <button class="completed__delete">
-            <img class="completed__delete-icon" src="./remove.svg" alt="Delete">
+          <input class="completed__checkbox todo__checkbox" type="checkbox" checked>
+          <label class="completed__label todo__label">See the Doctor</label>
+          <input class="completed__input todo__input" type="text">
+          <button class="completed__edit todo__edit">Edit</button>
+          <button class="completed__delete todo__delete">
+            <img class="completed__delete-icon todo__delete-icon" src="./remove.svg" alt="Delete">
           </button>
         </li>
       </ul>
